--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,38 @@ jobs:
           submodules: 'true'
 
       - name: Make
+        run: cd src/main/native && make
+
+      - name: Upload shared library
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux_lib
+          path: src/main/native/libfasttext.so
+
+  test-linux:
+
+    runs-on: ubuntu-latest
+    needs: build-linux
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          lfs: 'true'
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
+      - name: Download shared library
+        uses: actions/download-artifact@v4
+        with:
+          name: linux_lib
+          path: src/main/resources/com/diffbot/fasttext
+
+      - name: Test
         run: |
-          cd src/main/native
           pwd
-          make
+          ls -la src/main/resources/com/diffbot/fasttext/
+          ./gradlew test --info
